# neoman

./: .gitignore  Cargo.toml  LICENSE  go.mod  go.sum
cmd/: main.go
components/: mainmodel.go  responsebody.go  sidebar.go  struct.go  textbody.go  urlbar.go
go/: Makefile
go/cmd/: main.go
go/components/: sidebar.go  textbody.go  urlbar.go
internal/logger/: logger.go
src/: app.rs  event.rs  handler.rs  items.rs  lib.rs  main.rs  tui.rs  ui.rs
src/component/: mod.rs  requestbar.rs  responsebar.rs  sidebar.rs  tabbar.rs  urlbar.rs
