[package]
name = "neoman"
version = "0.1.0"
authors = ["Mustafa Zaki Assagaf <mustafa.segf@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.26.1"
cursorvec = "0.2.0"
lazy_static = "1.4.0"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tui = { package = "ratatui", version = "0.21.0" }
tui-tree-widget = { git = "https://github.com/mustafasegf/tui-rs-tree-widget", branch = "feature-ratatui", features = ["ratatui"] }
